# fast-api-workshop

./: .gitignore  LICENSE  README.md
docs/: M1-Getting Started.md  M2-Invoke with Parameters.md  M3-Model.md  M4-OpenAPI.md  M5-Bigger App.md  M6-Database.md
src/: apiing.py  async_db.py  db.py  fastapimongo.py  hello-fast.py  in_the_middle.py  main.py  models.py  pathings.py  pyproject.toml  requirements.txt  responding.py  schemaing.py  simplistic.py
src/bigger/: main.py
src/bigger/area1/: main.py
src/bigger/area51/: main.py
src/bigger/common/: routing.py
src/solutions/: M1.py  M2.py  M3.py  M4.py  M5.py  M6.py
