[tool.poetry]
name = "demo-project-one"
version = "0.0.7"
description = "A Marklar Project"
authors = ["Nuri H]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
starlette = "0.20.4"
pymongo = "4.2.0"
pydantic = "1.10.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.8"}

[build-system]
requires = ["poetry-core>=1.3.1"]
build-backend = "poetry.core.masonry.api"


# dynamic = ["dependencies"]

# [tool.setuptools.dynamic]
# dependencies = {file = ["requirements.txt"]}


[tool.poetry.scripts]
start = "main:api"